button text transform, dark mode form fixes

--- a/scss/_dark.scss
+++ b/scss/_dark.scss
@@ -11,7 +11,8 @@
   .topnav,
   .navbar,
   .dropdown-menu,
-  .form-control {
+  .form-control,
+  .selectgroup-button {
     background: rgba(0, 0, 0, .1);
     color: inherit;
   }
